--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <header>
+        <div class="navbar-right">
+            <a href="login.html">登录</a>
+            <a href="register.html">注册</a>
+        </div>
         <h2>Login</h2>
         <nav>
             <ul>
