--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
             <a href="./html/login.html">登录</a>
             <a href="./html/register.html">注册</a>
         </div>
+        <div class="top-left">
+            <a href="#" id="profileLink"><img src="./images/3.jpg" alt="Profile" /></a>
+        </div>
         <h1>Tensor Studio</h1>
         <nav>
             <ul>
@@ -35,6 +38,7 @@
     <footer>
         <p>版权所有 © <span id="current-year"></span> 我的博客</p>
     </footer>  
-    <script src="./js/scripts.js"></script> 
+    <script src="./js/scripts.js"></script>
+    <script src="./js/login_status.js"></script> 
 </body>
 </html>
